--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,18 @@
         android:theme="@style/Theme.FitnestX"
         tools:targetApi="31">
         <activity
+            android:name=".onboarding.SleepActivity"
+            android:exported="false" />
+        <activity
+            android:name=".onboarding.EatActivity"
+            android:exported="false" />
+        <activity
+            android:name=".onboarding.BurnActivity"
+            android:exported="false" />
+        <activity
+            android:name=".onboarding.TrackActivity"
+            android:exported="false" />
+        <activity
             android:name=".onboarding.Splash2Activity"
             android:exported="false" />
         <activity
@@ -26,7 +38,7 @@
         </activity>
         <activity
             android:name=".MainActivity"
-            android:exported="false"/>
+            android:exported="false" />
     </application>
 
 </manifest>
